log/build_2025-05-22_16-19-31/camera_pub/stderr.log
  File "/home/soda/VLAA/install/camera_pub/lib/python3.10/site-packages/camera_pub/camera_publisher_node.py", line 17
    "nvarguscamerasrc ! video/x-raw(memory:NVMM), width=1280, height=720, "
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

